--- a/public/view/HarryPotter.html
+++ b/public/view/HarryPotter.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Harry Potter</h1>
   </header>
-  <p>The Guardian ran a beautiful competition to write <a href="http://books.guardian.co.uk/potter/page/0,13381,1521782,00.html">a description of Dumbledore&#39;s death in the style of another author</a>. I particularly liked one in the syle of <a href="http://books.guardian.co.uk/harrypotter/story/0,10761,1529472,00.html">Gabriel Garcia Marquez</a>:</p>
+  <p>The Guardian ran a beautiful competition to write <a href="http://books.guardian.co.uk/potter/page/0,13381,1521782,00.html">a description of Dumbledore's death in the style of another author</a>. I particularly liked one in the syle of <a href="http://books.guardian.co.uk/harrypotter/story/0,10761,1529472,00.html">Gabriel Garcia Marquez</a>:</p>
 <p>”...everybody said for one hundred years after that Dumbledore saw it coming and let it sink into his flesh; he had taken another man’s women and he now owned her heart completely, and she his; and no amount of quick knives in the hands of small men would change that.”</p>
 
 </body>
