--- a/public/view/History.html
+++ b/public/view/History.html
@@ -12,10 +12,10 @@
   </header>
   <p><a href="/">Back to the home page</a></p>
 <ol>
-<li><p>Born in the late 1970&#39;s in Somerset, England</p>
+<li><p>Born in the late 1970's in Somerset, England</p>
 </li>
 <li><p>During my childhood was dragged across Europe and the middle east by
-my parent&#39;s late hippyness (initially in a bright yellow cross
+my parent's late hippyness (initially in a bright yellow cross
 between a removal van and a landrover).</p>
 </li>
 <li><p>Won a scholarship to <a href="http://www.millfield.somerset.sch.uk/">Millfield School</a></p>
@@ -71,22 +71,22 @@ with the …</p>
 </li>
 <li><p>Seconded to <a href="http://www.decc.gov.uk">the Department for Energy and Climate Change</a> ...</p>
 <ul>
-<li>where I assist the department&#39;s chief scientist—<a href="http://www.inference.phy.cam.ac.uk/mackay/">Professor David MacKay</a> ...</li>
+<li>where I assist the department's chief scientist—<a href="http://www.inference.phy.cam.ac.uk/mackay/">Professor David MacKay</a> ...</li>
 <li>... in particular, with developing the <a href="http://www.decc.gov.uk/en/content/cms/what_we_do/lc_uk/2050/2050.aspx">DECC 2050 Pathways</a></li>
 </ul>
 </li>
 <li><p>Became a permanent civil servant in the department and:</p>
 <ul>
 <li>Created the new engineering team</li>
-<li>then took over DECC&#39;s Futures team, part of the Strategy Directorate</li>
+<li>then took over DECC's Futures team, part of the Strategy Directorate</li>
 <li>then took my whole team to the International Climate Change directorate, to help other countries replicate what we did</li>
 <li>whilst in the International Directorate, I also looked after the forests, private finance and international climate finance team when their manager moved on.</li>
 <li>then moved to the newly expanded Analysis Directorate, working for the Chief Economist</li>
 </ul>
 </li>
-<li><p>After eight years of commuting from Brighton to London (a four hour round trip), I&#39;d had enough and moved to a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children&#39;s nurseries</a></p>
+<li><p>After eight years of commuting from Brighton to London (a four hour round trip), I'd had enough and moved to a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children's nurseries</a></p>
 <ul>
-<li>Went from a few people in the founder&#39;s house to a grown-up firm with a team of ten engineers and a million dollar spend.</li>
+<li>Went from a few people in the founder's house to a grown-up firm with a team of ten engineers and a million dollar spend.</li>
 <li>Spent lots of quality time with my children and fell in love with running across the South Downs</li>
 </ul>
 </li>
