--- a/public/view/MorphologicalAnalysisScript.html
+++ b/public/view/MorphologicalAnalysisScript.html
@@ -16,7 +16,7 @@
 # (c) 2005 Tom Counsell tom@counsell.org
 # Licenced under the GPL
 #
-# Helps with Zwicky&#39;s morphological analysis
+# Helps with Zwicky's morphological analysis
 # See http://www.swemorph.com/pdf/new-methods.pdf for details of that.
 #
 # Requires ruby 1.8
@@ -54,7 +54,7 @@
 #  - Above paper top
 #   
 # Let me know of any bugfixes or suggestions
-require &#39;yaml&#39;
+require 'yaml'
 
 class Parameter
 
