--- a/public/view/Phd.html
+++ b/public/view/Phd.html
@@ -39,7 +39,7 @@
 <ol>
 <li>A report on <a href="http://phys.org/news175847766.html">Phys.org</a>.</li>
 <li>A mention in the November 2009 UK edition of Wired Magazine</li>
-<li>Mentions in Julian Allwood&#39;s book <a href="http://www.withbotheyesopen.com">Sustainable Materials: with both eyes open</a>.</li>
+<li>Mentions in Julian Allwood's book <a href="http://www.withbotheyesopen.com">Sustainable Materials: with both eyes open</a>.</li>
 </ol>
 
 </body>
