--- a/public/view/Ruby.html
+++ b/public/view/Ruby.html
@@ -12,18 +12,18 @@
   </header>
   <p>See <a href="http://www.ruby-lang.org">www.ruby-lang.org</a></p>
 <p>From <a href="http://ruby-talk.org/cgi-bin/scat.rb/ruby/ruby-talk/179642">http://ruby-talk.org/cgi-bin/scat.rb/ruby/ruby-talk/179642</a> (Matz is the languates creator).</p>
-<pre><code>Subject: Re: Ruby&#39;s lisp features.
+<pre><code>Subject: Re: Ruby's lisp features.
 From: Yukihiro Matsumoto &lt;matz ruby-lang.org&gt;
 Date: Mon, 13 Feb 2006 13:43:02 +0900
 
 Hi,
 
-In message &quot;Re: Ruby&#39;s lisp features.&quot; on Mon, 13 Feb 2006 02:38:18 +0900, Edward Kenworthy &lt;edward kenworthy.info&gt; writes:
+In message "Re: Ruby's lisp features." on Mon, 13 Feb 2006 02:38:18 +0900, Edward Kenworthy &lt;edward kenworthy.info&gt; writes:
 
-|I&#39;ve been programming for more years than I care to remember and am  
-|enjoying programming in Ruby (especially on Rails). So far I&#39;ve found  
-|nothing &quot;new&quot; (to me) in Ruby, with the exception of the lisp-like  
-|features and that&#39;s something I&#39;d really like to explore.  
+|I've been programming for more years than I care to remember and am  
+|enjoying programming in Ruby (especially on Rails). So far I've found  
+|nothing "new" (to me) in Ruby, with the exception of the lisp-like  
+|features and that's something I'd really like to explore.  
 
 |Anyone able to point me to a resource please?
 
@@ -37,7 +37,7 @@ Ruby is a language designed in the following steps:
   * add functionality found in Perl (in OO way).
 
 So, Ruby was a Lisp originally, in theory.
-Let&#39;s call it MatzLisp from now on. ;-)
+Let's call it MatzLisp from now on. ;-)
 </code></pre>
 
 </body>
