--- a/public/view/SiteIndex.html
+++ b/public/view/SiteIndex.html
@@ -11,7 +11,7 @@
     <h1>SiteIndex</h1>
   </header>
   <h2>Site Index</h2>
-<p>Site Index was created automatically from pages whose title matches /.*/.</p>
+<p><a href="/site-index.html">Site Index</a> was created automatically from pages whose title matches /.*/.</p>
 <ul>
 <li><a href="ABoringFileForDarcsAndRails.html">A boring file for darcs and rails</a></li>
 <li><a href="ARakeTaskToSetTheFilePermissionsAndOwnershipInARailsProject.html">A rake task to set the file permissions and ownership in a rails project</a></li>
