--- a/public/view/ABoringFileForDarcsAndRails.html
+++ b/public/view/ABoringFileForDarcsAndRails.html
@@ -10,8 +10,8 @@
   <header>
     <h1>A boring file for darcs and rails</h1>
   </header>
-  <p><a href="Rails.html">Rails</a> has a fair number of files that it isn’t useful to include under version control. To manage this with <a href="Darcs.html">darcs</a> I create a file called boring with the content below, and then issue <code>darcs setpref boringfile boring</code>.</p>
-<p>You can then use <code>darcs add -r *</code> to add everything else to <a href="Darcs.html">darcs</a>, and everytime you add new files.</p>
+  <p><a href="/view/Rails.html">Rails</a> has a fair number of files that it isn't useful to include under version control. To manage this with <a href="/view/Darcs.html">darcs</a> I create a file called boring with the content below, and then issue <code>darcs setpref boringfile boring</code>.</p>
+<p>You can then use <code>darcs add -r *</code> to add everything else to <a href="/view/Darcs.html">darcs</a>, and everytime you add new files.</p>
 <p><code>``` # Boring file regexps: \.hi$ \.o$ \.o\.cmd$ # *.ko files aren't boring by default because they might # be Korean translations rather than kernel modules. # \.ko$ \.ko\.cmd$ \.mod\.c$ (^|/)\.tmp_versions($|/) (^|/)CVS($|/) (^|/)RCS($|/) ~$ #(^|/)\.[^/] (^|/)_darcs($|/) \.bak$ \.BAK$ \.orig$ (^|/)vssver\.scc$ \.swp$ (^|/)MT($|/) (^|/)\{arch\}($|/) (^|/).arch-ids($|/) (^|/), \.class$ \.prof$ (^|/)\.DS_Store$ (^|/)BitKeeper($|/) (^|/)ChangeSet($|/) (^|/)\.svn($|/) \.py[co]$ \# \.cvsignore$ (^|/)Thumbs\.db$ ^tmp/ \.sqlite3$ \.log$ db/schema\.rb config/lighttpd\.conf ^config/database.yml #&#160;You may wish to remove this one! ^test/tmp ^test/tmp/* ^index/* # Only relevant if you have acts as ferret ```</code></p>
 
 </body>
