--- a/public/view/AnAcronymFinder.html
+++ b/public/view/AnAcronymFinder.html
@@ -10,7 +10,7 @@
   <header>
     <h1>An Acronym finder</h1>
   </header>
-  <p>Catherine wanted to put a glossary in her thesis. To help find all the acronyms in her latex files I wrote this two line <a href="Ruby.html">ruby</a> script, maybe you will find it useful as well.</p>
+  <p>Catherine wanted to put a glossary in her thesis. To help find all the acronyms in her latex files I wrote this two line <a href="/view/Ruby.html">ruby</a> script, maybe you will find it useful as well.</p>
 <pre><code>#/usr/bin/ruby
 # Usage: ruby acronymfinder.rb filename.tex
 text = IO.readlines(ARGV[0]).join
