--- a/public/view/History.html
+++ b/public/view/History.html
@@ -18,7 +18,7 @@
 my parent's late hippyness (initially in a bright yellow cross
 between a removal van and a landrover).</p>
 </li>
-<li><p>Won a scholarship to <a href="http://www.millfield.somerset.sch.uk/">Millfield School</a></p>
+<li><p>Won a scholarship to <a href="http://www.millfield.somerset.sch.uk">Millfield School</a></p>
 <ul>
 <li>Grade A in lots of GCSEs (the exception was a B in English Language)</li>
 <li>Grade A in French, Physics, Maths, Further Maths A-Levels and in a Further Additional Maths AS.</li>
@@ -34,8 +34,7 @@ training centre before university and then worked each summer at:</p>
 <li>The Battle Group Battle Management System procurement team in Bristol.</li>
 </ul>
 </li>
-<li><p>Spent four years reading <a href="http://www.eng.cam.ac.uk">Engineering</a> at <a href="http://www.clare.cam.ac.uk">Clare College</a>, <a href="http://www.cam.ac.uk">Cambridge
-University</a>.</p>
+<li><p>Spent four years reading <a href="http://www.eng.cam.ac.uk">Engineering</a> at <a href="https://www.clare.cam.ac.uk">Clare College</a>, <a href="https://www.cam.ac.uk">Cambridge University</a>.</p>
 <ul>
 <li>Rowed, politiked, grooved and worked for a couple of start-ups</li>
 <li>BA (hons) first class etc followed by a MEng and later the
@@ -51,20 +50,18 @@ shut-down.</li>
 <li>Got a big promotion and left to….</li>
 </ul>
 </li>
-<li><p>Return to Cambridge to study for a <a href="Phd.html">PhD</a> under <a href="http://www.ifm.eng.cam.ac.uk/people/jma42/">Dr Julian
-Allwood</a> and live with
-my soon-to-be-wife Catherine</p>
+<li><p>Return to Cambridge to study for a <a href="/view/Phd.html">PhD</a> under Dr <a href="http://www.ifm.eng.cam.ac.uk/people/jma42">Julian Allwood</a> and live with my soon-to-be-wife Catherine</p>
 </li>
 <li><p>Got married</p>
 </li>
 <li><p>Worked as a teaching assistant in the department while I …</p>
 </li>
-<li><p>... finished my <a href="Phd.html">PhD</a>, moved to Brighton and started work
+<li><p>... finished my <a href="/view/Phd.html">PhD</a>, moved to <a href="https://en.wikipedia.org/wiki/Brighton">Brighton</a> and started work
 with the …</p>
 </li>
-<li><p><a href="http://www.carbontrust.com">Carbon Trust</a> in the strategy team.</p>
+<li><p><a href="https://www.carbontrust.com">Carbon Trust</a> in the strategy team.</p>
 <ul>
-<li>Subject expert on emissions trading schemes, working closely with <a href="http://www.econ.cam.ac.uk/rstaff/grubb/">Professor Michael Grubb</a>.</li>
+<li>Subject expert on emissions trading schemes, working closely with Professor <a href="http://www.econ.cam.ac.uk/rstaff/grubb/">Michael Grubb</a>.</li>
 <li>Worked on internal projects defining what the organisation could and should do</li>
 <li>Helped to produce a whole series of <a href="Publications.html">publications</a></li>
 </ul>
@@ -84,7 +81,7 @@ with the …</p>
 <li>then moved to the newly expanded Analysis Directorate, working for the Chief Economist</li>
 </ul>
 </li>
-<li><p>After eight years of commuting from Brighton to London (a four hour round trip), I'd had enough and moved to a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children's nurseries</a></p>
+<li><p>After eight years of commuting from <a href="https://en.wikipedia.org/wiki/Brighton">Brighton</a> to London (a four hour round trip), I'd had enough and moved to a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children's nurseries</a></p>
 <ul>
 <li>Went from a few people in the founder's house to a grown-up firm with a team of ten engineers and a million dollar spend.</li>
 <li>Spent lots of quality time with my children and fell in love with running across the South Downs</li>
