--- a/public/view/MorphologicalAnalysisScript.html
+++ b/public/view/MorphologicalAnalysisScript.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Morphological (combinatorial) analysis script</h1>
   </header>
-  <p>Zwicky proposed an approach to problem solving (described <a href="http://www.swemorph.com/pdf/new-methods.pdf">in this pdf</a>) that is rather tedious to do by hand. The script below helps. It requires <a href="Ruby.html">ruby</a> 1.8+. If you want to know more about Morphological Analysis, take a look at the Swedish Morphological Society’s site at <a href="http://www.swemorph.com">www.swemorph.com</a></p>
+  <p>Zwicky proposed an approach to problem solving (described <a href="http://www.swemorph.com/pdf/new-methods.pdf">in this pdf</a>) that is rather tedious to do by hand. The script below helps. It requires <a href="/view/Ruby.html">ruby</a> 1.8+. If you want to know more about Morphological Analysis, take a look at the Swedish Morphological Society’s site at <a href="http://www.swemorph.com">www.swemorph.com</a></p>
 <pre><code>#!/usr/bin/ruby
 # File name: zwicky.rb
 # (c) 2005 Tom Counsell tom@counsell.org
