--- a/public/view/OtherPages.html
+++ b/public/view/OtherPages.html
@@ -10,7 +10,7 @@
   <header>
     <h1>OtherPages</h1>
   </header>
-  <p><a href="History.html">History</a><br><a href="Phd.html">PhD</a><br><a href="StuffIDoAroundTheDepartment.html">Department work</a><br><a href="CollegeWork.html">College work</a><br><a href="Programming.html">Programming</a></p>
+  <p><a href="/view/History.html">History</a><br><a href="/view/Phd.html">PhD</a><br><a href="StuffIDoAroundTheDepartment.html">Department work</a><br><a href="/view/CollegeWork.html">College work</a><br><a href="/programming/index.html">Programming</a></p>
 
 </body>
 </html>
