--- a/public/view/PagesBibtex.html
+++ b/public/view/PagesBibtex.html
@@ -27,7 +27,7 @@
 <p>Open a terminal window. Change into this directory.</p>
 <ol>
 <li>open test.pages</li>
-<li><a href="Ruby.html">ruby</a> pages-bibtex.rb test.pages</li>
+<li><a href="/view/Ruby.html">ruby</a> pages-bibtex.rb test.pages</li>
 <li>open test-with-bibliography.pages</li>
 </ol>
 <h2>Usage</h2>
