--- a/public/view/Publications.html
+++ b/public/view/Publications.html
@@ -10,15 +10,15 @@
   <header>
     <h1>Carbon Trust Publications</h1>
   </header>
-  <p>I’ve been involved in four Carbon Trust publications:</p>
+  <p>I’ve been involved in four <a href="https://www.carbontrust.com">Carbon Trust</a> publications:</p>
 <ol>
 <li><a href="http://www.carbontrust.co.uk/publications/publicationdetail.htm?productid=CTC748">Global Carbon Mechanisms: Emerging lessons and implications</a></li>
 <li><a href="http://www.carbontrust.co.uk/publications/publicationdetail?productid=CTC740">Climate change – a business revolution?</a></li>
 <li><a href="http://www.carbontrust.co.uk/publications/publicationdetail?productid=CTC734">Cutting Carbon in Europe: The 2020 plans and the future of the EU ETS</a></li>
 <li><a href="http://www.carbontrust.co.uk/publications/publicationdetail.htm?productid=CTC728">EU ETS impacts on profitability and trade: a sector by sector analysis</a></li>
 </ol>
-<h1><a href="Phd.html">PhD</a> Publications</h1>
-<p>Some of the material in my <a href="Phd.html">PhD</a> thesis has been published in Journals and presented at conferences. In all cases my supervisor, <a href="http://www.ifm.eng.cam.ac.uk/people/jma42">Julian Allwood</a>, was co-author:</p>
+<h1>PhD Publications</h1>
+<p>Some of the material in my <a href="/view/Phd.html">PhD</a> thesis has been published in Journals and presented at conferences. In all cases my supervisor, <a href="http://www.ifm.eng.cam.ac.uk/people/jma42">Julian Allwood</a>, was co-author:</p>
 <h2>Journal papers</h2>
 <ol>
 <li>Reducing climate change gas emissions by cutting out stages in the life-cycle of oﬃce paper. Journal of Resources, Conservation and Recycling, 49(4):340–352, 2007. <a href="http://dx.doi.org/10.1016/j.resconrec.2006.03.018">http://dx.doi.org/10.1016/j.resconrec.2006.03.018</a></li>
