--- a/public/view/Rails.html
+++ b/public/view/Rails.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Rails</h1>
   </header>
-  <p>Rails is a handy set of libraries for web applications in <a href="Ruby.html">ruby</a>.</p>
+  <p>Rails is a handy set of libraries for web applications in <a href="/view/Ruby.html">ruby</a>.</p>
 <p>See: <a href="http://www.rubyonrails.com">http://www.rubyonrails.com</a></p>
 
 </body>
