--- a/public/view/StuffIDoAroundTheDepartment.html
+++ b/public/view/StuffIDoAroundTheDepartment.html
@@ -13,7 +13,7 @@
   <p>In addition to my <a href="Phd.html">PhD</a> and occasionally helping my supervisor out, I have:</p>
 <ul>
 <li>Organised a two day workshop on “Research Methodology” for new PhDs and academics from across the UK (<a href="http://www.srcf.ucam.org/ifmrmw/">http://www.srcf.ucam.org/ifmrmw/</a>).</li>
-<li>Some Materials supervising of second year undergraduate engineers at Clare college, maths supervising of first year undergraduate engineers at Caius college and Automation and Control supervising of third year undergraduate engineers studying MET.</li>
+<li>Some Materials supervising of second year undergraduate engineers at <a href="https://www.clare.cam.ac.uk">Clare college</a>, maths supervising of first year undergraduate engineers at Caius college and Automation and Control supervising of third year undergraduate engineers studying MET.</li>
 <li>Taken the third year engineers on trips to <a href="http://www.jaguar.co.uk">Jaguar</a>, <a href="http://www.delphi.com">Delphi</a> and <a href="http://www.mkelectric.co.uk/">MK Electric</a>.</li>
 <li>Starting to work with my supervisor to establish a sustainable manufacturing group (<a href="http://www.ifm.eng.cam.ac.uk/sustainability/">http://www.ifm.eng.cam.ac.uk/sustainability/</a>).</li>
 <li>Given some talks as part of the <a href="http://www.ifm.eng.cam.ac.uk">MET</a> undergraduate course and <a href="http://www-g.eng.cam.ac.uk/sustdev/mphil.html">MPhil in engineering for sustainable development</a>.</li>
