--- a/public/view/TextileToHtml.html
+++ b/public/view/TextileToHtml.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Textile to HTML</h1>
   </header>
-  <p>Textile is a markup language that is meant to make it quick and easy to write basic web pages for wikis, blogs and other uses. Redcloth is a <a href="Ruby.html">ruby</a> class that converts textile to html, written by _why. Details are at <a href="http://www.whytheluckystiff.net/ruby/redcloth/">http://www.whytheluckystiff.net/ruby/redcloth/</a> . Unfortunately, due to my own failings, I find it hard to understand _why’s code, so I wrote a partial reimplementation bellow. This has the benefit of (for me) being clearer and easier to extend. The drawback is that it doesn’t do all that _why’s version does and is slower. But it is here in case anyone finds it useful.</p>
+  <p>Textile is a markup language that is meant to make it quick and easy to write basic web pages for wikis, blogs and other uses. Redcloth is a <a href="/view/Ruby.html">ruby</a> class that converts textile to html, written by _why. Details are at <a href="http://www.whytheluckystiff.net/ruby/redcloth/">http://www.whytheluckystiff.net/ruby/redcloth/</a> . Unfortunately, due to my own failings, I find it hard to understand _why’s code, so I wrote a partial reimplementation bellow. This has the benefit of (for me) being clearer and easier to extend. The drawback is that it doesn’t do all that _why’s version does and is slower. But it is here in case anyone finds it useful.</p>
 <pre><code>require 'strscan'
 
 # Note: Does not implement anything beyond that on http://hobix.com/textile/
