--- a/public/view/AccessingActioncontrollerFromActionmailerUsingIntegrationSession.html
+++ b/public/view/AccessingActioncontrollerFromActionmailerUsingIntegrationSession.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Accessing ActionController from ActionMailer using Integration::Session</h1>
   </header>
-  <p>Up until <a href="Rails.html">Rails</a> 1.1 there was no easy way to include output from ActionControllers in a mail message created with ActionMailer. Now you can use code like this in your mail view templates:</p>
+  <p>Up until <a href="/view/Rails.html">Rails</a> 1.1 there was no easy way to include output from ActionControllers in a mail message created with ActionMailer. Now you can use code like this in your mail view templates:</p>
 <p> <code>``` &lt;%   session = ActionController::Integration::Session.new %&gt;  &lt;%   session.host! 'www.mysite.com' %&gt;  &lt;%  session.get session.url_for(:controller =&gt; 'view', :action =&gt; 'somthing' ) %&gt;  &lt;%=   session.response.body %&gt; ```</code></p>
 
 </body>
